addons/kyverno/policies/edtech-uk_aadc_privacy_by_default-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-uk_aadc_privacy_by_default
  annotations:
    rulehub.id: edtech.uk_aadc_privacy_by_default
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: edtech.uk_aadc_privacy_by_default: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
